# reco-service-itmo

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: test.yml
notebooks/hw_2/: metrics.ipynb
notebooks/hw_3/: knn.ipynb
notebooks/hw_4/: mf.ipynb
notebooks/hw_5/: DSSM.ipynb
service/: settings.py
service/api/: app.py  middlewares.py  recommendation_models.py  views.py
tests/api/: test_views.py
