[tool.poetry]
name = "reco_service"
version = "0.0.1"
description = ""
authors = ["Emiliy Feldman <feldlime@yandex.ru>"]
maintainers = ["Emiliy Feldman <feldlime@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "service" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
gunicorn = "^21.2.0"
uvloop = "^0.19.0"
uvicorn = "^0.23.0"
orjson = "^3.9.10"
starlette = "^0.27.0"
httpx = "^0.22.0"  # for starlette.testclient
pydantic-settings = "^2.0.3"
pandas = "^1.5.0"
pyarrow = "19.0.1"
rectools = {version = "0.12.0", extras = ["lightfm", "nmslib"]}
torch = { version = "2.6.0", source = "pytorch-cu124"}

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
default = false

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
requests = "^2.31.0"
mypy = "^1.6.1"
isort = "^5.12.0"
bandit = "^1.7.5"
flake8 = "^6.1.0"
pylint = "^3.0.2"
black = "^23.10.1"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
